tests/ui/coherence/coherence-cross-crate-conflict.stderr
error[E0210]: type parameter `A` must be used as the argument to some local type (e.g., `MyStruct<A>`)
  --> $DIR/coherence-cross-crate-conflict.rs:9:6
   |
LL | impl<A> Foo for A {
   |      ^ uncovered type parameter
   |
   = note: implementing a foreign trait is only possible if at least one of the types for which it is implemented is local
   = note: only traits defined in the current crate can be implemented for type parameters and opaque types

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0210`.
